--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" type="text/css" href="style.css"> <!--引入css文件-->
 </head>
 
-<!--头部标签结束-->
+<!--头部标签结束-->.
 
 <!--主体标签开始-->
 
 <body>
-
+<div>
+    这是一条测试文字
+</div>
 </body>
 
 <!--主体标签结束-->
