--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 
 <head>
     <meta charset="UTF-8"> <!--编码-->
-    <title>Document</title> <!--标题-->
+    <title>学生成绩分析</title> <!--标题-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
+    <meta name="keywords" content="学生成绩分析"> <!--关键词-->
+    <meta name="description" content="学生成绩分析"> <!--描述-->
+    <meta name="author" content="罗文烨、李朝晖、沈志鸣"> <!--作者-->
+    <link rel="icon" href="favicon.ico"> <!--图标-->
+    <script src="jquery-3.3.1.min.js"></script> <!--引入jquery文件-->
     <script src="script.js"></script> <!--引入js文件-->
     <link rel="stylesheet" type="text/css" href="style.css"> <!--引入css文件-->
 </head>
@@ -15,8 +21,28 @@
 <!--主体标签开始-->
 
 <body>
-    <p>Hello world!</p>
-
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <img src="logo.png" alt="logo">
+            </div>
+            <div class="title">
+                <h1>学生成绩分析</h1>
+            </div>
+        </div>
+        <div class="content">
+            <div class="content-left">
+                <div class="content-left-top">
+                    <div class="content-left-top-title">
+                        <h2>学生成绩分析</h2>
+                    </div>
+                    <div class="content-left-top-content">
+                        <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 <!--主体标签结束-->
