Update favicon link in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="学生成绩分析"> <!--关键词-->
     <meta name="description" content="学生成绩分析"> <!--描述-->
     <meta name="author" content="罗文烨、李朝晖、沈志鸣"> <!--作者-->
-    <link rel="icon" href="favicon.ico"> <!--图标-->
+    <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
     <script src="js/main.js"></script> <!--引入js文件-->
     <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
