Update navbar styling

--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="css/navbar.css"> <!--引入css文件-->
 
 <div class="navbar">
-    <div class="logo">
+    <div class="nav-logo">
         <img src="logo.png" alt="logo">
     </div>
     <div class="nav-item">
