--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -2,7 +2,7 @@
 
 <div class="navbar">
     <div class="nav-logo">
-        <img src="logo.png" alt="logo">
+        <img src="media/ico/logo.svg" alt="logo">
     </div>
     <div class="nav-item">
         <a href="#section1">Section 1</a>
