--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -2,15 +2,12 @@
 
 <div class="navbar">
     <div class="nav-logo">
-        <img src="media/ico/logo.svg" alt="logo">
+        <a href="index.html"><img src="media/ico/logo.svg" alt="logo"></a>
     </div>
     <div class="nav-item">
-        <a href="#section1">Section 1</a>
+        <a href="person.html">个人分析</a>
     </div>
     <div class="nav-item">
-        <a href="#section2">Section 2</a>
-    </div>
-    <div class="nav-item">
-        <a href="#section3">Section 3</a>
+        <a href="class.html">班级分析</a>
     </div>
 </div>
