pref: optimize navigation bar

--- a/frontend/class.html
+++ b/frontend/class.html
@@ -9,14 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
-    <script src="js/main.js"></script> <!--引入js文件-->
     <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-    <!--顶端导航栏-->
-    <script>
-        $(function () {
-            $("#navbar").load("navbar.html");
-        });
-    </script>
+    <script src="js/main.js"></script> <!--引入js文件-->
 </head>
 
 <!--头部标签结束-->
@@ -25,8 +19,9 @@
 
 <body>
     <div id="navbar"></div>
-    <div class="container">
-
+    <div class="content">
+        <div class="container">
+        </div>
     </div>
 </body>
 
