--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -2,12 +2,12 @@
 
 <div class="navbar">
     <div class="nav-logo">
-        <a href="index.html"><img src="media/ico/logo.svg" alt="logo"></a>
+        <a href="index.html" class="navbar-button"><img src="media/ico/logo.svg" alt="logo"></a>
     </div>
     <div class="nav-item">
-        <a href="person.html">个人分析</a>
+        <a href="person.html" class="navbar-button">个人分析</a>
     </div>
     <div class="nav-item">
-        <a href="class.html">班级分析</a>
+        <a href="class.html" class="navbar-button">班级分析</a>
     </div>
 </div>
