Update page titles in HTML files

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8"> <!--编码-->
-    <title>学生成绩分析 - 个人分析</title> <!--标题-->
+    <title>个人分析 - 学生成绩分析</title> <!--标题-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
