fix: navigation bar redirection issue

--- a/frontend/class.html
+++ b/frontend/class.html
@@ -9,8 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
-    <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-    <script src="js/main.js"></script> <!--引入js文件-->
 </head>
 
 <!--头部标签结束-->
@@ -19,12 +17,20 @@
 
 <body>
     <div id="navbar"></div>
-    <div class="content">
+    <div class="main-content">
         <div class="container">
+            <div class="header">
+                <div class="title">
+                    <h1>班级成绩分析</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
 
 <!--主体标签结束-->
+
+<script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
+<script src="js/main.js"></script> <!--引入js文件-->
 
 </html>
