--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,6 @@
     <meta name="author" content="罗文烨、李朝晖、沈志鸣"> <!--作者-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
-    <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-    <script src="js/main.js"></script> <!--引入js文件-->
 </head>
 
 <!--头部标签结束-->
@@ -22,22 +20,20 @@
 
 <body>
     <div id="navbar"></div>
-    <div class="content">
+    <div class="main-content">
         <div class="container">
             <div class="header">
                 <div class="title">
                     <h1>学生成绩分析</h1>
                 </div>
             </div>
-            <div class="content">
-                <div class="content-left">
-                    <div class="content-left-top">
-                        <div class="content-left-top-title">
-                            <h2>学生成绩分析</h2>
-                        </div>
-                        <div class="content-left-top-content">
-                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
-                        </div>
+            <div class="content-left">
+                <div class="content-left-top">
+                    <div class="content-left-top-title">
+                        <h2>学生成绩分析</h2>
+                    </div>
+                    <div class="content-left-top-content">
+                        <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
                     </div>
                 </div>
             </div>
@@ -46,5 +42,8 @@
 </body>
 
 <!--主体标签结束-->
+
+<script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
+<script src="js/main.js"></script> <!--引入js文件-->
 
 </html>
