--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,13 +27,15 @@
                     <h1>学生成绩分析</h1>
                 </div>
             </div>
-            <div class="content-left">
-                <div class="content-left-top">
-                    <div class="content-left-top-title">
-                        <h2>学生成绩分析</h2>
-                    </div>
-                    <div class="content-left-top-content">
-                        <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
+            <div class="content">
+                <div class="content-left">
+                    <div class="content-left-top">
+                        <div class="content-left-top-title">
+                            <h2>学生成绩分析</h2>
+                        </div>
+                        <div class="content-left-top-content">
+                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
+                        </div>
                     </div>
                 </div>
             </div>
