fix: edit conflict

--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -2,8 +2,7 @@
 
 <footer>
     <div class="footer-content">
-        <p>版权所有 &copy; 2023</p>
-        <p>码农工作室</p>
+        <p>版权所有 &copy; 2023 码农工作室</p>
         <p><a href="resources.html" target="_blank">使用的库和资源</a></p>
     </div>
 </footer>
