feat: import Chart.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,9 @@
 
 <!--主体标签结束-->
 
+<!--脚本标签开始-->
 <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
 <script src="js/main.js"></script> <!--引入js文件-->
+<!--脚本标签结束-->
 
 </html>
