--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -9,6 +9,7 @@
     <h1>使用的库和资源</h1>
     <ul>
         <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
+        <li><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></li>
         <!-- 其他的库和资源 -->
     </ul>
 </body>
