--- a/frontend/person.html
+++ b/frontend/person.html
@@ -86,7 +86,10 @@
 
 <!--主体标签结束-->
 
+<!--脚本标签开始-->
 <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
+<script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
 <script src="js/main.js"></script> <!--引入js文件-->
+<!--脚本标签结束-->
 
 </html>
