--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,6 +38,28 @@
                         </div>
                     </div>
                 </div>
+                <HR align="center" width = 100% color="#867d7d"SIZE="2">
+                    <h3 class="intro">关于班级成绩</h3>
+                    <div align="left">
+                        <p>
+                            通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据。<br><br>
+                            还可以图表的形式，更直观的得到成绩分布情况,并比较不同考试之间的差别<br>
+                        </p>
+                    </div>
+                    <HR align="center" width = 100% color="#867d7d"SIZE="2">
+                    <h3 class="intro">关于学生成绩</h3>
+                        <p>
+                            学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
+                            不仅可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
+                            能更高效地反馈学生学习概况,辅助学生了解现状<br>
+                        </p>
+                    <HR align="center" width = 100% color="#867d7d"SIZE="2">
+                        <h3 class="intro">Hint</h3>
+                        <p>希望同学们能利用学生成绩分析系统自我分析，不断进步<br><br>
+                            但更希望同学们不为成绩所困，不为焦虑绑架<br><br>
+                            相信你的心就是你的魔法！<br>
+                        </p>
+                    </div>
             </div>
         </div>
     </div>
