--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" type="text/css" href="css/footer.css"> <!--引入css文件-->
+<head>
+    <meta charset="UTF-8"> <!--编码-->
+    <link rel="stylesheet" type="text/css" href="css/footer.css"> <!--引入css文件-->
+</head>
 
 <footer>
     <div class="footer-content">
