--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" type="text/css" href="css/navbar.css"> <!--引入css文件-->
+<head>
+    <meta charset="UTF-8"> <!--编码-->
+    <link rel="stylesheet" type="text/css" href="css/navbar.css"> <!--引入css文件-->
+</head>
 
 <div class="navbar">
     <div class="nav-logo">
