feat: Modify the location of calling JavaScript&&Remind users to enable JavaScript

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,11 @@
     <meta name="author" content="罗文烨、李朝晖、沈志鸣"> <!--作者-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
+    <!--脚本标签开始-->
+    <script src="js/jquery-3.7.1.min.js" async></script> <!--引入jquery文件-->
+    <script src="js/chart-4.4.0.min.js" async></script> <!--引入chart.js文件-->
+    <script src="js/main.js"></script> <!--引入js文件-->
+    <!--脚本标签结束-->
 </head>
 
 <!--头部标签结束-->
@@ -19,6 +24,14 @@
 <!--主体标签开始-->
 
 <body>
+    <noscript>
+        <div
+            style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);">
+            <div style="background-color: yellow; padding: 20px; border-radius: 10px;">
+                你的浏览器似乎禁用了 JavaScript。为了能够正常使用这个网站的所有功能，你需要启用 JavaScript。
+            </div>
+        </div>
+    </noscript>
     <div id="navbar"></div>
     <div class="main-content">
         <div class="container">
@@ -38,40 +51,34 @@
                         </div>
                     </div>
                 </div>
-                <HR align="center" width = 100% color="#867d7d"SIZE="2">
-                    <h3 class="intro">关于班级成绩</h3>
-                    <div align="left">
-                        <p>
-                            通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据。<br><br>
-                            还可以图表的形式，更直观的得到成绩分布情况,并比较不同考试之间的差别<br>
-                        </p>
-                    </div>
-                    <HR align="center" width = 100% color="#867d7d"SIZE="2">
-                    <h3 class="intro">关于学生成绩</h3>
-                        <p>
-                            学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
-                            不仅可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
-                            能更高效地反馈学生学习概况,辅助学生了解现状<br>
-                        </p>
-                    <HR align="center" width = 100% color="#867d7d"SIZE="2">
-                        <h3 class="intro">Hint</h3>
-                        <p>希望同学们能利用学生成绩分析系统自我分析，不断进步<br><br>
-                            但更希望同学们不为成绩所困，不为焦虑绑架<br><br>
-                            相信你的心就是你的魔法！<br>
-                        </p>
-                    </div>
+                <HR align="center" width=100% color="#867d7d" SIZE="2">
+                <h3 class="intro">关于班级成绩</h3>
+                <div align="left">
+                    <p>
+                        通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据。<br><br>
+                        还可以图表的形式，更直观的得到成绩分布情况,并比较不同考试之间的差别<br>
+                    </p>
+                </div>
+                <HR align="center" width=100% color="#867d7d" SIZE="2">
+                <h3 class="intro">关于学生成绩</h3>
+                <p>
+                    学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
+                    不仅可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
+                    能更高效地反馈学生学习概况,辅助学生了解现状<br>
+                </p>
+                <HR align="center" width=100% color="#867d7d" SIZE="2">
+                <h3 class="intro">Hint</h3>
+                <p>希望同学们能利用学生成绩分析系统自我分析，不断进步<br><br>
+                    但更希望同学们不为成绩所困，不为焦虑绑架<br><br>
+                    相信你的心就是你的魔法！<br>
+                </p>
             </div>
         </div>
+    </div>
     </div>
     <div id="footer"></div>
 </body>
 
 <!--主体标签结束-->
-
-<!--脚本标签开始-->
-<script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-<script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
-<script src="js/main.js"></script> <!--引入js文件-->
-<!--脚本标签结束-->
 
 </html>
