--- a/frontend/class.html
+++ b/frontend/class.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
+    <!--脚本标签开始-->
+    <script src="js/jquery-3.7.1.min.js" async></script> <!--引入jquery文件-->
+    <script src="js/chart-4.4.0.min.js" async></script> <!--引入chart.js文件-->
+    <script src="js/main.js"></script> <!--引入js文件-->
+    <!--脚本标签结束-->
 </head>
 
 <!--头部标签结束-->
@@ -16,6 +21,14 @@
 <!--主体标签开始-->
 
 <body>
+    <noscript>
+        <div
+            style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);">
+            <div style="background-color: yellow; padding: 20px; border-radius: 10px;">
+                你的浏览器似乎禁用了 JavaScript。为了能够正常使用这个网站的所有功能，你需要启用 JavaScript。
+            </div>
+        </div>
+    </noscript>
     <div id="navbar"></div>
     <div class="main-content">
         <div class="container">
@@ -30,11 +43,5 @@
 </body>
 
 <!--主体标签结束-->
-
-<!--脚本标签开始-->
-<script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-<script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
-<script src="js/main.js"></script> <!--引入js文件-->
-<!--脚本标签结束-->
 
 </html>
