fix:exchange , to ，

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
                             <h2>学生成绩分析</h2>
                         </div>
                         <div class="content-left-top-content">
-                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等。</p>
+                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等</p>
                         </div>
                     </div>
                 </div>
@@ -56,15 +56,15 @@
                 <div align="left">
                     <p>
                         通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据。<br><br>
-                        还可以图表的形式，更直观的得到成绩分布情况,并比较不同考试之间的差别<br>
+                        还可以图表的形式，更直观地得到成绩分布情况,并比较不同考试之间的差别<br>
                     </p>
                 </div>
                 <HR align="center" width=100% color="#867d7d" SIZE="2">
                 <h3 class="intro">关于学生成绩</h3>
                 <p>
                     学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
-                    不仅可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
-                    能更高效地反馈学生学习概况,辅助学生了解现状<br>
+                    可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
+                    能更高效地反馈学生学习概况，辅助学生了解现状<br>
                 </p>
                 <HR align="center" width=100% color="#867d7d" SIZE="2">
                 <h3 class="intro">Hint</h3>
