Auto stash before merge of "main" and "origin/main"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
                 <div align="left">
                     <p>
                         通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据。<br><br>
-                        还可以图表的形式，更直观地得到成绩分布情况,并比较不同考试之间的差别<br>
+                        还可以图表的形式，更直观地得到成绩分布情况，并比较不同考试之间的差别<br>
                     </p>
                 </div>
                 <HR align="center" width=100% color="#867d7d" SIZE="2">
