--- a/frontend/person.html
+++ b/frontend/person.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--移动端适配-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
+    <link rel="stylesheet" type="text/css" href="css/person.css">
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
     <script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
@@ -61,14 +62,15 @@
                 </div>
                 <div class="student-score-table-div">
                     <table class="student-score-table" border="1" width=100% cellpadding="10">
-                        <caption><b>个人成绩</b></caption>
+                        <caption><b>个人成绩</b><b class="student-score-table-note">注：排名升降中“-”代表退步</b></caption>
                         <thead>
                             <tr>
                                 <th>科目</th>
                                 <th>分数</th>
                                 <th>班名</th>
                                 <th>级名</th>
-                                <th>升降</th>
+                                <th>班名升降</th>
+                                <th>级名升降</th>
                             </tr>
                         </thead>
                         <tbody>
