Frontend: person.html: Finish basic function. TODO: style.

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -78,6 +78,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div id="student-score-chart-div">
+                    
+                </div>
             </div>
         </div>
     </div>
