fix: Table note is missed

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -61,8 +61,9 @@
                     <button id="student-submit" disabled>查询</button>
                 </div>
                 <div class="student-score-table-div">
-                    <table class="student-score-table" border="1" width=100% cellpadding="10"rules="all">
-                        <caption><b>个人成绩</b></caption>
+                    <table class="student-score-table" border="1" width=100% cellpadding="10" rules="all">
+                        <caption><b>个人成绩</b><b class="student-score-table-note">注：排名升降中“-”代表退步，以绿色标识；“+”表示进步，以红色标识</b>
+                        </caption>
                         <thead>
                             <tr>
                                 <th>科目</th>
