--- a/frontend/person.html
+++ b/frontend/person.html
@@ -62,7 +62,9 @@
                 </div>
                 <div class="student-score-table-div">
                     <table class="student-score-table" border="1" width=100% cellpadding="10" rules="all">
-                        <caption><b>个人成绩</b><b class="student-score-table-note">注：排名升降中“-”代表退步，以绿色标识；“+”表示进步，以红色标识</b>
+                        <caption><b>个人成绩</b>
+                            <!--红色通常与警告或者危险相关联，而绿色与安全或者正面的变化相关联-->
+                            <b class="student-score-table-note">注：排名升降中“-”代表退步，以红色标识；“+”表示进步，以绿色标识</b>
                         </caption>
                         <thead>
                             <tr>
