style: Add sheet color

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
     <link rel="stylesheet" type="text/css" href="css/person.css">
     <!--脚本标签开始-->
-    <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-    <script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
-    <script src="js/main.js"></script> <!--引入js文件-->
-    <script src="js/person.js" defer></script>
+    <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
+    <script src="js/chart-4.4.0.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入chart.js文件-->
+    <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
+    <script src="js/person.js" type="text/javascript" charset="UTF-8" defer></script>
     <!--脚本标签结束-->
 </head>
 
@@ -86,14 +86,6 @@
         </div>
     </div>
     <div id="footer"></div>
-    <script src="./jquery-3.6.0.js" type="text/javascript" charset="UTF-8"></script>
-    <script type="text/javascript">
-        $(function () {
-            $("thead tr").css("background-color", "#adabab");
-            $("tbody tr:even").css("background-color", "white");
-            $("tbody tr:odd").css("background-color", "#adabab");
-        })
-    </script>
 </body>
 
 <!--主体标签结束-->
