--- a/frontend/class.html
+++ b/frontend/class.html
@@ -10,9 +10,9 @@
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
     <!--脚本标签开始-->
-    <script src="js/jquery-3.7.1.min.js"></script> <!--引入jquery文件-->
-    <script src="js/chart-4.4.0.min.js"></script> <!--引入chart.js文件-->
-    <script src="js/main.js"></script> <!--引入js文件-->
+    <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
+    <script src="js/chart-4.4.0.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入chart.js文件-->
+    <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
     <!--脚本标签结束-->
 </head>
 
