style: person.html

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -62,16 +62,16 @@
                 </div>
                 <div class="student-score-table-div">
                     <table class="student-score-table" border="1" width=100% cellpadding="10" rules="all">
-                        <caption><b>个人成绩</b>
+                        <caption><b>个人成绩<br></b>
                             <!--红色通常与警告或者危险相关联，而绿色与安全或者正面的变化相关联-->
-                            <b class="student-score-table-note">注：排名升降中“-”代表退步，以红色标识；“+”表示进步，以绿色标识</b>
+                            <b class="student-score-table-note">注：排名中括号内容表示排名升降：“-”代表退步，以红色标识；“+”表示进步，以绿色标识</b>
                         </caption>
                         <thead>
                             <tr>
                                 <th>科目</th>
                                 <th>分数</th>
-                                <th>班名</th>
-                                <th>级名</th>
+                                <th>班级排名</th>
+                                <th>年级排名</th>
                             </tr>
                         </thead>
                         <tbody>
