Frontend: person.html: Add buttons to enable users to choose which subject to chart.

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -79,6 +79,7 @@
                         </tbody>
                     </table>
                 </div>
+                <div id="student-score-chart-select-div"></div>
                 <div id="student-score-chart-div">
 
                 </div>
