--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -13,4 +13,7 @@
     <div class="nav-item">
         <a href="class.html" class="navbar-button">班级分析</a>
     </div>
+    <div class="nav-item">
+        <a href="data.html" class="navbar-button">数据管理</a>
+    </div>
 </div>
