Frontend: class.html: Add red annotation

--- a/frontend/class.html
+++ b/frontend/class.html
@@ -61,7 +61,7 @@
             <table class="analysis-table" border="1" width=100% cellpadding="10" rules="all">
                 <caption><b>班级成绩<br></b>
                     <!--红色通常与警告或者危险相关联，而绿色与安全或者正面的变化相关联-->
-                    <b class="class-analysis-table-note">注：绿色标注表示班级平均分高于年级平均分。</b>
+                    <b class="class-analysis-table-note">注：绿色标注表示班级平均分高于年级平均分，红色表示低于年级平均分</b>
                 </caption>
                 <thead>
                     <tr>
