--- a/frontend/class.html
+++ b/frontend/class.html
@@ -22,7 +22,7 @@
 
 <!--主体标签开始-->
 
-<body>
+<body id="class">
     <noscript>
         <div
             style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);">
