--- a/frontend/person.html
+++ b/frontend/person.html
@@ -79,9 +79,12 @@
                         </tbody>
                     </table>
                 </div>
-                <div id="student-score-chart-select-div"></div>
-                <div id="student-score-chart-div">
-
+                <div id="student-score-chart-container">
+                    <div id="student-score-chart-title">
+                        <span>各科分数及排名</span>
+                    </div>
+                    <div id="student-score-chart-select-div"></div>
+                    <div id="student-score-chart-div"></div>
                 </div>
             </div>
         </div>
