Frontend: Add TODO

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -79,8 +79,17 @@
                         </tbody>
                     </table>
                 </div>
+                <!--
+                    TODO: 个人成绩分析图表
+                <div id="student-score-overview-chart-container">
+                    <div id="chart-container-title">
+                        <span>各科发挥水平诊断</span>
+                    </div>
+                    <div id="student-score-overview-chart-div"></div>
+                </div>
+                -->
                 <div id="student-score-chart-container">
-                    <div id="student-score-chart-title">
+                    <div id="chart-container-title">
                         <span>各科分数及排名</span>
                     </div>
                     <div id="student-score-chart-select-div"></div>
