--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,7 @@
                         还可以通过图表的形式，更直观地得到成绩分布情况<br><br>
                         比较不同考试之间的差别，反应班级平均分和年级平均分之间的差距<br>
                         </p>
+                        <img src="/Website/frontend/media/class table.png" class="pic">
                     </div>
                     <div class="column2">
                         <h3 class="intro">关于学生成绩</h3>
@@ -67,7 +68,7 @@
                             可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
                             能更高效地反馈学生学习概况，辅助学生了解现状<br>
                             </p>
-                
+                        <img src="/Website/frontend/media/person.png" class="pic">
                     </div>                  
                 </div>
                 <h3 class="intro">Hint</h3>
