Frontend: Fix: Move css specifically for index.html to index.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="罗文烨、李朝晖、沈志鸣"> <!--作者-->
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
     <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
