--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,8 +56,7 @@
                         <h3 class="intro">关于班级成绩</h3>
                         <p>
                             通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据<br><br>
-                            还可以通过图表的形式，更直观地得到成绩分布情况<br><br>
-                            比较不同考试之间的差别，反应班级平均分和年级平均分之间的差距<br>
+                            还可以通过图表的形式，更直观地得到成绩分布情况，反应班级平均分和年级平均分之间的差距<br>
                         </p>
                         <img src="media/class.png" class="pic">
                     </div>
@@ -65,8 +64,7 @@
                         <h3 class="intro">关于学生成绩</h3>
                         <p>
                             学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
-                            可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
-                            能更高效地反馈学生学习概况，辅助学生了解现状<br>
+                            可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br>
                         </p>
                         <img src="media/person.png" class="pic">
                     </div>
