--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
         <li><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></li>
+        <li><a href="https://pqina.nl/filepond/" target="_blank">filepond</a></li>
         <!-- 其他的库和资源 -->
     </ul>
 </body>
