--- a/frontend/person.html
+++ b/frontend/person.html
@@ -70,8 +70,11 @@
                             <tr>
                                 <th>科目</th>
                                 <th>分数</th>
+                                <th>平均分（班级/年级）</th>
+                                <th>最高分（班级/年级）</th>
                                 <th>班级排名</th>
                                 <th>年级排名</th>
+                                <th>参考人数（班级/年级）</th>
                             </tr>
                         </thead>
                         <tbody>
