--- a/frontend/data.html
+++ b/frontend/data.html
@@ -10,9 +10,11 @@
     <link rel="icon" href="favicon.svg"> <!--图标-->
     <link rel="stylesheet" type="text/css" href="css/main.css"> <!--引入css文件-->
     <link rel="stylesheet" type="text/css" href="css/data.css">
+    <link rel="stylesheet" type="text/css" href="css/filepond.css">
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
     <script src="js/chart-4.4.0.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入chart.js文件-->
+    <script src="js/filepond-4.30.4.js" type="text/javascript" charset="UTF-8"></script>
     <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
     <script src="js/data.js" type="text/javascript" charset="UTF-8" defer></script>
     <!--脚本标签结束-->
@@ -38,6 +40,9 @@
                 <div class="title">
                     <h1>数据管理</h1>
                 </div>
+            </div>
+            <div class="file-uploader-div">
+                <input type="file" id="file-uploader" name="file-uploader" multiple>
             </div>
         </div>
     </div>
