Frontend: DataPage: Finish data upload & download.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
     <script src="js/filepond-4.30.4.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="js/download.min.js" type="text/javascript" charset="UTF-8"></script>
     <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
     <!--脚本标签结束-->
 </head>
