--- a/frontend/class.html
+++ b/frontend/class.html
@@ -13,6 +13,8 @@
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
     <script src="js/chart-4.4.0.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入chart.js文件-->
+    <script src="js/filepond-4.30.4.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="js/download.min.js" type="text/javascript" charset="UTF-8"></script>
     <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
     <script src="js/class.js" type="text/javascript" charset="UTF-8" defer></script>
     <!--脚本标签结束-->
