--- a/frontend/data.html
+++ b/frontend/data.html
@@ -14,7 +14,9 @@
     <!--脚本标签开始-->
     <script src="js/jquery-3.7.1.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入jquery文件-->
     <script src="js/chart-4.4.0.min.js" type="text/javascript" charset="UTF-8"></script> <!--引入chart.js文件-->
+    <script src="js/filepond-plugin-file-validate-size.js" type="text/javascript" charset="UTF-8"></script>
     <script src="js/filepond-4.30.4.js" type="text/javascript" charset="UTF-8"></script>
+    <script src="js/download.min.js" type="text/javascript" charset="UTF-8"></script>
     <script src="js/main.js" type="text/javascript" charset="UTF-8"></script> <!--引入js文件-->
     <script src="js/data.js" type="text/javascript" charset="UTF-8" defer></script>
     <!--脚本标签结束-->
@@ -42,7 +44,24 @@
                 </div>
             </div>
             <div class="file-uploader-div">
+                <h3>考试数据上传</h3>
+                <div class="file-uploader-notes">支持文件格式：CSV；编码：UTF-8；文件命名：(序号)(学期)_(考试名称).csv（示例：46高三下_十.csv）</div>
+                <div class="file-uploader-counts-div">已上传文件数量：<span class="file-uploader-counts">0</span></div>
                 <input type="file" id="file-uploader" name="file-uploader" multiple>
+                <button id="load-data-btn" disabled>载入数据</button>
+                <div class="file-uploader-result" hidden>加载成功！</div>
+            </div>
+            <div class="data-download-div">
+                <h3>考试数据下载</h3>
+                <label for="grade-selection">年级</label>
+                <select id="grade-selection">
+                    <option>Loading...</option>
+                </select>
+                <label for="exam-selection">考试</label>
+                <select id="exam-selection">
+                    <option>Loading...</option>
+                </select>
+                <button id="download-submit" disabled>下载</button>
             </div>
         </div>
     </div>
