--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -12,6 +12,7 @@
         <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
         <li><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></li>
         <li><a href="https://pqina.nl/filepond/" target="_blank">filepond</a></li>
+        <li><a href="https://github.com/rndme/download/" target="_blank">download</a></li>
         <!-- 其他的库和资源 -->
     </ul>
 </body>
