Frontend: index.html: Fix typo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
                         <h3 class="intro">关于班级成绩</h3>
                         <p>
                             通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据<br><br>
-                            还可以通过图表的形式，更直观地得到成绩分布情况，反应班级平均分和年级平均分之间的差距<br>
+                            还可以通过图表的形式，更直观地得到成绩分布情况，反映班级平均分和年级平均分之间的差距<br>
                         </p>
                         <img src="media/class.png" class="pic">
                     </div>
