--- a/frontend/class.html
+++ b/frontend/class.html
@@ -42,22 +42,27 @@
                 </div>
             </div>
             <div class="class-selection-div">
-                <label for="grade-selection">年级</label>
-                <select id="grade-selection">
-                    <option>Loading...</option>
-                </select>
-                <label for="exam-selection">考试</label>
-                <select id="exam-selection">
-                    <option>Loading...</option>
-                </select>
-                <label for="class-selection">班级</label>
-                <select id="class-selection">
-                    <option>Loading...</option>
-                </select>
-                <button id="class-submit">查询</button>
+                <div class="select-group">
+                    <label for="grade-selection">年级</label>
+                    <select id="grade-selection">
+                        <!-- options -->
+                    </select>
+                </div>
+                <div class="select-group">
+                    <label for="exam-selection">考试</label>
+                    <select id="exam-selection">
+                        <!-- options -->
+                    </select>
+                </div>
+                <div class="select-group">
+                    <label for="class-selection">班级</label>
+                    <select id="class-selection">
+                        <!-- options -->
+                    </select>
+                </div>
             </div>
-            <div class="basic-info-div">
-                所选班级：<span id="class-id"></span> 本次考试有效人数：<span id="valid-num"></span>
+            <div class="button-group">
+                <button id="class-submit" disabled>查询</button>
             </div>
             <div class="analysis-table-div"></div>
             <table class="analysis-table" border="1" width=100% cellpadding="10" rules="all">
@@ -81,9 +86,11 @@
                     </tr>
                 </thead>
                 <tbody>
-
                 </tbody>
             </table>
+            <div class="basic-info-div">
+                班级有效人数：<span id="valid-num"></span>
+            </div>
             <div class="subject-selection-div"></div>
             <div class="subject-chart-div"></div>
         </div>
