Fronted: Enable submit button for class and student queries

--- a/frontend/class.html
+++ b/frontend/class.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="button-group">
-                <button id="class-submit" disabled>查询</button>
+                <button id="class-submit">查询</button>
             </div>
             <div class="analysis-table-div"></div>
             <table class="analysis-table" border="1" width=100% cellpadding="10" rules="all">
