--- a/frontend/person.html
+++ b/frontend/person.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="button-group">
-                    <button id="student-submit" disabled>查询</button>
+                    <button id="student-submit">查询</button>
                 </div>
             </div>
             <div class="student-score-table-div">
