--- a/frontend/person.html
+++ b/frontend/person.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="button-group">
-                    <button id="student-submit">查询</button>
+                    <button id="student-submit" disabled>查询</button>
                 </div>
             </div>
             <div class="student-score-table-div">
@@ -95,15 +95,14 @@
                     </tbody>
                 </table>
             </div>
-            <!--
-                    TODO: 个人成绩分析图表
-                <div id="student-score-overview-chart-container">
-                    <div id="chart-container-title">
-                        <span>各科发挥水平诊断</span>
-                    </div>
-                    <div id="student-score-overview-chart-div"></div>
+
+            <div id="student-score-overview-chart-container">
+                <div id="chart-container-title">
+                    <span>各科发挥水平诊断</span>
                 </div>
-                -->
+                <div id="student-score-overview-chart-div"></div>
+            </div>
+
             <div id="student-score-chart-container">
                 <div id="chart-container-title">
                     <span>各科分数及排名</span>
