Frontend: Style: Update overview score chart display

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -101,6 +101,7 @@
                     <span>各科发挥水平诊断</span>
                 </div>
                 <div id="student-score-overview-chart-div"></div>
+                <p class="chart-note">注：数据由班级排名得到，表示超过班级学生的百分比</p>
             </div>
 
             <div id="student-score-chart-container">
