Frontend: Add student score overview container and analysis

--- a/frontend/person.html
+++ b/frontend/person.html
@@ -96,6 +96,21 @@
                 </table>
             </div>
 
+            <div id="student-score-overview-container">
+                <div id="overview-container-title">
+                    <span>总体评价</span>
+                </div>
+                <div id="student-score-overview-analysis">
+                    本次考试的优势学科为<span id="student-score-overview-analysis-best-subject"></span>，劣势学科为<span
+                        id="student-score-overview-analysis-worst-subject"></span>。
+                    <div id="better-div">
+                        本次<span id="student-score-overview-analysis-better-subject"></span>有进步，请继续保持；
+                    </div>
+                    <div id="worse-div">
+                        本次<span id="student-score-overview-analysis-worse-subject"></span>有退步，请多加留意。
+                    </div>
+                </div>
+            </div>
             <div id="student-score-chart-container">
                 <div id="chart-container-title">
                     <span>各科分数及排名</span>
@@ -110,16 +125,6 @@
                     </div>
                     <div id="student-score-overview-chart-div"></div>
                     <p class="chart-note">注：数据由班级排名得到，表示超过班级学生的百分比</p>
-                </div>
-                <div id="student-score-overview-analysis">
-                    本次考试的优势学科为<span id="student-score-overview-analysis-best-subject"></span>，劣势学科为<span
-                        id="student-score-overview-analysis-worst-subject"></span>。
-                    <div id="better-div">
-                        本次<span id="student-score-overview-analysis-better-subject"></span>有进步，请继续保持；
-                    </div>
-                    <div id="worse-div">
-                        本次<span id="student-score-overview-analysis-worse-subject"></span>有退步，请多加留意。
-                    </div>
                 </div>
             </div>
         </div>
