--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
                             <h2>学生成绩分析</h2>
                         </div>
                         <div class="content-left-top-content">
-                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等</p>
+                            <p>学生成绩分析是一个基于学生成绩的分析系统，可以对学生成绩进行分析，包括学生成绩的分布、学生成绩的排名、学生成绩的对比等等，辅助老师的教学工作</p>
                         </div>
                     </div>
                 </div>
@@ -57,8 +57,9 @@
                     <div class="column1">
                         <h3 class="intro">关于学生成绩</h3>
                         <p>
-                            学生成绩分析系统还可以进行个性化分析，对个人的成绩进行分析<br><br>
-                            可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br>
+                            学生成绩分析系统可以进行个性化分析，对个人的成绩进行分析<br><br>
+                            可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
+                            帮助教师针对性的辅导学生学习<br>
                         </p>
                         <img src="media/person.png" class="pic">
                     </div>
@@ -66,16 +67,12 @@
                         <h3 class="intro">关于班级成绩</h3>
                         <p>
                         通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据<br><br>
-                        还可以通过图表的形式，更直观地得到成绩分布情况，反映班级平均分和年级平均分之间的差距<br>
+                        还可以通过图表的形式，更直观地得到成绩分布情况，反映班级平均分和年级平均分之间的差距<br><br>
+                        教师可以利用学生成绩分析系统，整体把握班级成绩变化，更好的制定教学计划<br>
                         </p>
                         <img src="media/class.png" class="pic">
                     </div>
                 </div>
-                <h3 class="intro">Hint</h3>
-                <p>希望同学们能利用学生成绩分析系统自我分析，不断进步<br><br>
-                    但更希望同学们不为成绩所困，不为焦虑绑架<br><br>
-                    相信你的心就是你的魔法！<br>
-                </p>
             </div>
         </div>
     </div>
