--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,12 @@
                         <img src="media/class.png" class="pic">
                     </div>
                 </div>
+                <div>
+                    <h3 class="intro">Hint</h3>
+                    <p>
+                        希望学生成绩分析系统能更好的帮助老师的工作，提高工作效率<br><br>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
