--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@
                         <p>
                             学生成绩分析系统可以进行个性化分析，对个人的成绩进行分析<br><br>
                             可以查询各科考试成绩，快速得到成绩数据，也能用函数图像反映成绩变化，动态展现近期学习情况<br><br>
-                            帮助教师针对性的辅导学生学习<br>
+                            帮助教师针对性地辅导学生学习<br>
                         </p>
                         <img src="media/person.png" class="pic">
                     </div>
@@ -68,7 +68,7 @@
                         <p>
                         通过导入班级成绩等基本信息，学生成绩分析系统可以完成数据统计工作，得到极值、标准差等高级数据<br><br>
                         还可以通过图表的形式，更直观地得到成绩分布情况，反映班级平均分和年级平均分之间的差距<br><br>
-                        教师可以利用学生成绩分析系统，整体把握班级成绩变化，更好的制定教学计划<br>
+                        教师可以利用学生成绩分析系统，整体把握班级成绩变化，更好地制定教学计划<br>
                         </p>
                         <img src="media/class.png" class="pic">
                     </div>
@@ -76,7 +76,7 @@
                 <div>
                     <h3 class="intro">Hint</h3>
                     <p>
-                        希望学生成绩分析系统能更好的帮助老师的工作，提高工作效率<br><br>
+                        希望学生成绩分析系统能更好地帮助老师的工作，提高工作效率<br><br>
                     </p>
                 </div>
             </div>
